Initial commit with current project state